--- a/about.html
+++ b/about.html
@@ -125,18 +125,37 @@
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
                         <h6 class="text-orange text-uppercase" style="letter-spacing: 5px;">Sobre Nosotros</h6>
-                        <h1 class="mb-3">Texro de la empresa electrosai</h1>
-                        <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                        <h1 class="mb-3">Soliciones de Calidad</h1>
+                        <p>Ofrecemos Servicios en la fabricación de Salas Eléctricas y tablero UPS. Además contamos con el equipo necesario para la reparación, mantención y fabricación de cabinas insonorizadas para Grupos Electrógenos desde los 50[KVA] hasta los 1500[KVA]. Contamos con alta experiencia en la fabricación de estanques de combustible para grupos electógenos, además de tanques externos de respaldo de hasta 30.000 litros. Contamos con más de 8 años de experiencia en el rubro y destacamos por entregar soluciones que sean de calidad y confianza</p>
                         <div class="row mb-4">
                             <div class="col-6">
-                                <img class="img-fluid" src="img/about-1.jpg" alt="">
+                                <img class="img-fluid" src="img/molinos4.jpg" alt="">
                             </div>
                             <div class="col-6">
-                                <img class="img-fluid" src="img/about-2.jpg" alt="">
+                                <img class="img-fluid" src="img/molinos5.2.jpg" alt="">
                             </div>
                         </div>
-                        <a href="" class="btn btn-primary mt-1">Book Now</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About End -->
+
+    <!-- About Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-5">
+                    <img class="img-fluid" src="img/molinos.jpg" alt="">
+                </div>
+                <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
+                    <h6 class="text-orange text-uppercase font-weight-medium mb-3">Sobre Nosotros</h6>
+                    <h1 class="mb-4">Soluciones de Calidad</h1>
+                    <p class="mb-2">Ofrecemos Servicios en la fabricación de Salas Eléctricas y tablero UPS. Además contamos con el equipo necesario para la reparación,
+                         mantención y fabricación de cabinas insonorizadas para Grupos Electrógenos desde los 50[KVA] hasta los 1500[KVA]. Contamos con alta experiencia
+                          en la fabricación de estanques de combustible para grupos electógenos, además de tanques externos de respaldo de hasta 30.000 litros. Contamos
+                           con más de 8 años de experiencia en el rubro y destacamos por entregar soluciones que sean de calidad y confianza</p>
                 </div>
             </div>
         </div>
@@ -151,11 +170,11 @@
                 <div class="col-md-4">
                     <div class="d-flex mb-4 mb-lg-0">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-money-check-alt text-white"></i>
+                            <i class="fa fa-2x fa-award text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
-                            <h5 class="">Competitive Pricing</h5>
-                            <p class="m-0">Magna sit magna dolor duo dolor labore rebum amet elitr est diam sea</p>
+                            <h5 class="">Líderes en la Industria</h5>
+                            <p class="m-0">Con más de 9 años de experiencia como líderes en la industría. </p>
                         </div>
                     </div>
                 </div>
@@ -165,19 +184,19 @@
                             <i class="fa fa-2x fa-award text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
-                            <h5 class="">Best Services</h5>
-                            <p class="m-0">Magna sit magna dolor duo dolor labore rebum amet elitr est diam sea</p>
+                            <h5 class="">Resultados Satisfactorios</h5>
+                            <p class="m-0">Tu satisfacción y confianza, nuestra prioridad.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex mb-4 mb-lg-0">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-globe text-white"></i>
+                            <i class="fa fa-2x fa-award text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
-                            <h5 class="">Worldwide Coverage</h5>
-                            <p class="m-0">Magna sit magna dolor duo dolor labore rebum amet elitr est diam sea</p>
+                            <h5 class="">Soluciones de Ingeniería</h5>
+                            <p class="m-0">Soluciones reales para tus proyectos.</p>
                         </div>
                     </div>
                 </div>
