--- a/service.html
+++ b/service.html
@@ -117,50 +117,50 @@
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-                <h6 class="text-electro text-uppercase" style="letter-spacing: 5px;">Servicios</h6>
-                <h1>Servicios de la Empresa</h1>
+               <!-- <h6 class="text-electro text-uppercase" style="letter-spacing: 5px;">Servicios</h6> -->
+                <h1>Servicios</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
                         <i class="fa fa-2x fa-route mx-auto mb-4"></i>
-                        <h5 class="mb-2">Travel Guide</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <h5 class="mb-2">Fabricación de Salas Eléctricas</h5>
+                        <p class="m-0">Módulos acondicionados para alojar equipos eléctricos como inversores, tableros, sistemas de control y grupos electrógenos.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
                         <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
-                        <h5 class="mb-2">Ticket Booking</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <h5 class="mb-2">Grupos Electrógenos</h5>
+                        <p class="m-0">Instalación, mantención y reparación especializada para asegurar operación continua.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
                         <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
-                        <h5 class="mb-2">Hotel Booking</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <h5 class="mb-2">Cabinas Insonorizadas</h5>
+                        <p class="m-0"> Fabricación personalizada de Gabinetes Insonorizados para garantizar requerimientos de cliente.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
                         <i class="fa fa-2x fa-route mx-auto mb-4"></i>
-                        <h5 class="mb-2">Travel Guide</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <h5 class="mb-2">Estanques de Combustible</h5>
+                        <p class="m-0">Fabricación de estanques de combustibles para Grupos Generadores para una mayor autonomía. Además de estanques externos de hasta de 30.000 litros. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
-                        <h5 class="mb-2">Ticket Booking</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <i class="fa fa-2x fas fa-hard-hat mx-auto mb-4"></i>
+                        <h5 class="mb-2">Obras Civiles</h5>
+                        <p class="m-0">Ejecución de proyectos en terreno, integrando diseño eléctrico y construcción civil según requerimientos específicos solicitados por cliente.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
-                        <h5 class="mb-2">Hotel Booking</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <i class=" fa-2x fas fa-pipe mx-auto mb-4"></i>
+                        <h5 class="mb-2">Fabricación de Pipelines</h5>
+                        <p class="m-0">Diseño y fabricación especializada de tuberías para conducción segura y eficiente de fluidos industriales.</p>
                     </div>
                 </div>
             </div>
